packages/win32/src/user32.g.h

MYLIB_EXPORT Win32Result RegisterTouchHitTestingWindow_Wrapper(HWND hwnd, unsigned long value);
MYLIB_EXPORT Win32Result RegisterTouchWindow_Wrapper(HWND hwnd, DWORD ulFlags);
MYLIB_EXPORT Win32Result RegisterWindowMessageW_Wrapper(PCWSTR lpString);
MYLIB_EXPORT Win32Result ReleaseCapture_Wrapper();
MYLIB_EXPORT Win32Result RemoveClipboardFormatListener_Wrapper(HWND hwnd);
MYLIB_EXPORT Win32Result RemoveMenu_Wrapper(HMENU hMenu, unsigned long uPosition, DWORD uFlags);
MYLIB_EXPORT Win32Result RemovePropW_Wrapper(HWND hWnd, PCWSTR lpString);
MYLIB_EXPORT Win32Result ScrollDC_Wrapper(HDC hDC, int dx, int dy, RECT* lprcScroll, RECT* lprcClip, HRGN hrgnUpdate, RECT* lprcUpdate);
MYLIB_EXPORT Win32Result ScrollWindow_Wrapper(HWND hWnd, int xAmount, int yAmount, RECT* lpRect, RECT* lpClipRect);
MYLIB_EXPORT Win32Result ScrollWindowEx_Wrapper(HWND hWnd, int dx, int dy, RECT* prcScroll, RECT* prcClip, HRGN hrgnUpdate, RECT* prcUpdate, DWORD flags);
MYLIB_EXPORT Win32Result SendInput_Wrapper(unsigned long cInputs, INPUT* pInputs, int cbSize);
MYLIB_EXPORT Win32Result SendMessageW_Wrapper(HWND hWnd, unsigned long msg, WPARAM wParam, LPARAM lParam);
MYLIB_EXPORT Win32Result SendMessageCallbackW_Wrapper(HWND hWnd, unsigned long msg, WPARAM wParam, LPARAM lParam, SENDASYNCPROC lpResultCallBack, unsigned long long dwData);
MYLIB_EXPORT Win32Result SendMessageTimeoutW_Wrapper(HWND hWnd, unsigned long msg, WPARAM wParam, LPARAM lParam, DWORD fuFlags, unsigned long uTimeout, unsigned long long* lpdwResult);
MYLIB_EXPORT Win32Result SendNotifyMessageW_Wrapper(HWND hWnd, unsigned long msg, WPARAM wParam, LPARAM lParam);
MYLIB_EXPORT Win32Result SetActiveWindow_Wrapper(HWND hWnd);
MYLIB_EXPORT Win32Result SetCaretBlinkTime_Wrapper(unsigned long uMSeconds);
MYLIB_EXPORT Win32Result SetCaretPos_Wrapper(int x, int y);
MYLIB_EXPORT Win32Result SetClassLongPtrW_Wrapper(HWND hWnd, LONG nIndex, long long dwNewLong);
MYLIB_EXPORT Win32Result SetClipboardData_Wrapper(unsigned long uFormat, HANDLE hMem);
MYLIB_EXPORT Win32Result SetClipboardViewer_Wrapper(HWND hWndNewViewer);
MYLIB_EXPORT Win32Result SetCoalescableTimer_Wrapper(HWND hWnd, unsigned long long nIDEvent, unsigned long uElapse, TIMERPROC lpTimerFunc, unsigned long uToleranceDelay);
MYLIB_EXPORT Win32Result SetCursorPos_Wrapper(int x, int y);
MYLIB_EXPORT Win32Result SetDialogControlDpiChangeBehavior_Wrapper(HWND hWnd, LONG mask, LONG values);
MYLIB_EXPORT Win32Result SetDialogDpiChangeBehavior_Wrapper(HWND hDlg, LONG mask, LONG values);
MYLIB_EXPORT Win32Result SetDlgItemInt_Wrapper(HWND hDlg, int nIDDlgItem, unsigned long uValue, BOOL bSigned);
MYLIB_EXPORT Win32Result SetDlgItemTextW_Wrapper(HWND hDlg, int nIDDlgItem, PCWSTR lpString);
MYLIB_EXPORT Win32Result SetDoubleClickTime_Wrapper(unsigned long param0);
MYLIB_EXPORT Win32Result SetFocus_Wrapper(HWND hWnd);
MYLIB_EXPORT Win32Result SetGestureConfig_Wrapper(HWND hwnd, unsigned long dwReserved, unsigned long cIDs, GESTURECONFIG* pGestureConfig, unsigned long cbSize);
MYLIB_EXPORT Win32Result SetKeyboardState_Wrapper(unsigned char* lpKeyState);
MYLIB_EXPORT Win32Result SetLayeredWindowAttributes_Wrapper(HWND hwnd, COLORREF crKey, unsigned char bAlpha, DWORD dwFlags);
MYLIB_EXPORT Win32Result SetMenu_Wrapper(HWND hWnd, HMENU hMenu);
MYLIB_EXPORT Win32Result SetMenuDefaultItem_Wrapper(HMENU hMenu, unsigned long uItem, unsigned long fByPos);
MYLIB_EXPORT Win32Result SetMenuInfo_Wrapper(HMENU param0, MENUINFO* param1);
MYLIB_EXPORT Win32Result SetMenuItemBitmaps_Wrapper(HMENU hMenu, unsigned long uPosition, DWORD uFlags, HBITMAP hBitmapUnchecked, HBITMAP hBitmapChecked);
MYLIB_EXPORT Win32Result SetMenuItemInfoW_Wrapper(HMENU hmenu, unsigned long item, BOOL fByPositon, MENUITEMINFOW* lpmii);
MYLIB_EXPORT Win32Result SetParent_Wrapper(HWND hWndChild, HWND hWndNewParent);
MYLIB_EXPORT Win32Result SetPhysicalCursorPos_Wrapper(int x, int y);
MYLIB_EXPORT Win32Result SetProcessDpiAwarenessContext_Wrapper(DPI_AWARENESS_CONTEXT value);
MYLIB_EXPORT Win32Result SetPropW_Wrapper(HWND hWnd, PCWSTR lpString, HANDLE hData);
MYLIB_EXPORT Win32Result SetSysColors_Wrapper(int cElements, int* lpaElements, COLORREF* lpaRgbValues);
MYLIB_EXPORT Win32Result SetSystemCursor_Wrapper(HCURSOR hcur, DWORD id);
MYLIB_EXPORT Win32Result SetTimer_Wrapper(HWND hWnd, unsigned long long nIDEvent, unsigned long uElapse, TIMERPROC lpTimerFunc);
MYLIB_EXPORT Win32Result SetUserObjectInformationW_Wrapper(HANDLE hObj, int nIndex, void* pvInfo, unsigned long nLength);
MYLIB_EXPORT Win32Result SetWindowDisplayAffinity_Wrapper(HWND hWnd, DWORD dwAffinity);
MYLIB_EXPORT Win32Result SetWindowLongPtrW_Wrapper(HWND hWnd, LONG nIndex, long long dwNewLong);
MYLIB_EXPORT Win32Result SetWindowPlacement_Wrapper(HWND hWnd, WINDOWPLACEMENT* lpwndpl);
MYLIB_EXPORT Win32Result SetWindowPos_Wrapper(HWND hWnd, HWND hWndInsertAfter, int x, int y, int cx, int cy, DWORD uFlags);
MYLIB_EXPORT Win32Result SetWindowsHookExW_Wrapper(LONG idHook, HOOKPROC lpfn, HINSTANCE hmod, unsigned long dwThreadId);
MYLIB_EXPORT Win32Result SetWindowTextW_Wrapper(HWND hWnd, PCWSTR lpString);
MYLIB_EXPORT Win32Result ShowCaret_Wrapper(HWND hWnd);
MYLIB_EXPORT Win32Result ShowOwnedPopups_Wrapper(HWND hWnd, BOOL fShow);
MYLIB_EXPORT Win32Result SkipPointerFrameMessages_Wrapper(unsigned long pointerId);
MYLIB_EXPORT Win32Result SwitchDesktop_Wrapper(HDESK hDesktop);
MYLIB_EXPORT Win32Result SystemParametersInfoW_Wrapper(DWORD uiAction, unsigned long uiParam, void* pvParam, DWORD fWinIni);
MYLIB_EXPORT Win32Result SystemParametersInfoForDpi_Wrapper(unsigned long uiAction, unsigned long uiParam, void* pvParam, unsigned long fWinIni, unsigned long dpi);
MYLIB_EXPORT Win32Result TileWindows_Wrapper(HWND hwndParent, DWORD wHow, RECT* lpRect, unsigned long cKids, HWND* lpKids);
MYLIB_EXPORT Win32Result TrackPopupMenu_Wrapper(HMENU hMenu, DWORD uFlags, int x, int y, int nReserved, HWND hWnd, RECT* prcRect);
MYLIB_EXPORT Win32Result TrackPopupMenuEx_Wrapper(HMENU hMenu, unsigned long uFlags, int x, int y, HWND hwnd, TPMPARAMS* lptpm);
MYLIB_EXPORT Win32Result TranslateAcceleratorW_Wrapper(HWND hWnd, HACCEL hAccTable, MSG* lpMsg);
MYLIB_EXPORT Win32Result UnhookWindowsHookEx_Wrapper(HHOOK hhk);
MYLIB_EXPORT Win32Result UnloadKeyboardLayout_Wrapper(HKL hkl);
MYLIB_EXPORT Win32Result UnregisterClassW_Wrapper(PCWSTR lpClassName, HINSTANCE hInstance);
MYLIB_EXPORT Win32Result UnregisterDeviceNotification_Wrapper(HDEVNOTIFY handle);