packages/win32/lib/src/_internal/user32.g.dart


@internal
@Native<NativeWin32Result Function(HWND, Uint32)>()
external NativeWin32Result RegisterTouchHitTestingWindow_Wrapper(
  int hwnd,
  int value,
);

@internal
@Native<NativeWin32Result Function(HWND, Uint32)>()
external NativeWin32Result RegisterTouchWindow_Wrapper(int hwnd, int ulFlags);

@internal
@Native<NativeWin32Result Function(PCWSTR)>()
external NativeWin32Result RegisterWindowMessageW_Wrapper(PCWSTR lpString);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result ReleaseCapture_Wrapper();

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result RemoveClipboardFormatListener_Wrapper(int hwnd);

@internal
@Native<NativeWin32Result Function(HMENU, Uint32, Uint32)>()
external NativeWin32Result RemoveMenu_Wrapper(
  int hMenu,
  int uPosition,
  int uFlags,
);

@internal
@Native<NativeWin32Result Function(HWND, PCWSTR)>()
external NativeWin32Result RemovePropW_Wrapper(int hWnd, PCWSTR lpString);

@internal
@Native<
  NativeWin32Result Function(
    HDC,
    Int32,
    Int32,
    Pointer<RECT>,
    Pointer<RECT>,
    HRGN,
    Pointer<RECT>,
  )
>()
external NativeWin32Result ScrollDC_Wrapper(
  int hDC,
  int dx,
  int dy,
  Pointer<RECT> lprcScroll,
  Pointer<RECT> lprcClip,
  int hrgnUpdate,
  Pointer<RECT> lprcUpdate,
);

@internal
@Native<
  NativeWin32Result Function(HWND, Int32, Int32, Pointer<RECT>, Pointer<RECT>)
>()
external NativeWin32Result ScrollWindow_Wrapper(
  int hWnd,
  int xAmount,
  int yAmount,
  Pointer<RECT> lpRect,
  Pointer<RECT> lpClipRect,
);

@internal
@Native<
  NativeWin32Result Function(
    HWND,
    Int32,
    Int32,
    Pointer<RECT>,
    Pointer<RECT>,
    HRGN,
    Pointer<RECT>,
    Uint32,
  )
>()
external NativeWin32Result ScrollWindowEx_Wrapper(
  int hWnd,
  int dx,
  int dy,
  Pointer<RECT> prcScroll,
  Pointer<RECT> prcClip,
  int hrgnUpdate,
  Pointer<RECT> prcUpdate,
  int flags,
);

@internal
@Native<NativeWin32Result Function(Uint32, Pointer<INPUT>, Int32)>()
external NativeWin32Result SendInput_Wrapper(
  int cInputs,
  Pointer<INPUT> pInputs,
  int cbSize,
);

@internal
@Native<NativeWin32Result Function(HWND, Uint32, WPARAM, LPARAM)>()
external NativeWin32Result SendMessageW_Wrapper(
  int hWnd,
  int msg,
  int wParam,
  int lParam,
);

@internal
@Native<
  NativeWin32Result Function(
    HWND,
    Uint32,
    WPARAM,
    LPARAM,
    Pointer<NativeFunction<SENDASYNCPROC>>,
    IntPtr,
  )
>()
external NativeWin32Result SendMessageCallbackW_Wrapper(
  int hWnd,
  int msg,
  int wParam,
  int lParam,
  Pointer<NativeFunction<SENDASYNCPROC>> lpResultCallBack,
  int dwData,
);

@internal
@Native<
  NativeWin32Result Function(
    HWND,
    Uint32,
    WPARAM,
    LPARAM,
    Uint32,
    Uint32,
    Pointer<IntPtr>,
  )
>()
external NativeWin32Result SendMessageTimeoutW_Wrapper(
  int hWnd,
  int msg,
  int wParam,
  int lParam,
  int fuFlags,
  int uTimeout,
  Pointer<IntPtr> lpdwResult,
);

@internal
@Native<NativeWin32Result Function(HWND, Uint32, WPARAM, LPARAM)>()
external NativeWin32Result SendNotifyMessageW_Wrapper(
  int hWnd,
  int msg,
  int wParam,
  int lParam,
);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result SetActiveWindow_Wrapper(int hWnd);

@internal
@Native<NativeWin32Result Function(Uint32)>()
external NativeWin32Result SetCaretBlinkTime_Wrapper(int uMSeconds);

@internal
@Native<NativeWin32Result Function(Int32, Int32)>()
external NativeWin32Result SetCaretPos_Wrapper(int x, int y);

@internal
@Native<NativeWin32Result Function(HWND, Int32, IntPtr)>()
external NativeWin32Result SetClassLongPtrW_Wrapper(
  int hWnd,
  int nIndex,
  int dwNewLong,
);

@internal
@Native<NativeWin32Result Function(Uint32, HANDLE)>()
external NativeWin32Result SetClipboardData_Wrapper(int uFormat, int hMem);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result SetClipboardViewer_Wrapper(int hWndNewViewer);

@internal
@Native<
  NativeWin32Result Function(
    HWND,
    IntPtr,
    Uint32,
    Pointer<NativeFunction<TIMERPROC>>,
    Uint32,
  )
>()
external NativeWin32Result SetCoalescableTimer_Wrapper(
  int hWnd,
  int nIDEvent,
  int uElapse,
  Pointer<NativeFunction<TIMERPROC>> lpTimerFunc,
  int uToleranceDelay,
);

@internal
@Native<NativeWin32Result Function(Int32, Int32)>()
external NativeWin32Result SetCursorPos_Wrapper(int x, int y);

@internal
@Native<NativeWin32Result Function(HWND, Int32, Int32)>()
external NativeWin32Result SetDialogControlDpiChangeBehavior_Wrapper(
  int hWnd,
  int mask,
  int values,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32, Int32)>()
external NativeWin32Result SetDialogDpiChangeBehavior_Wrapper(
  int hDlg,
  int mask,
  int values,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32, Uint32, BOOL)>()
external NativeWin32Result SetDlgItemInt_Wrapper(
  int hDlg,
  int nIDDlgItem,
  int uValue,
  int bSigned,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32, PCWSTR)>()
external NativeWin32Result SetDlgItemTextW_Wrapper(
  int hDlg,
  int nIDDlgItem,
  PCWSTR lpString,
);

@internal
@Native<NativeWin32Result Function(Uint32)>()
external NativeWin32Result SetDoubleClickTime_Wrapper(int param0);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result SetFocus_Wrapper(int hWnd);

@internal
@Native<
  NativeWin32Result Function(
    HWND,
    Uint32,
    Uint32,
    Pointer<GESTURECONFIG>,
    Uint32,
  )
>()
external NativeWin32Result SetGestureConfig_Wrapper(
  int hwnd,
  int dwReserved,
  int cIDs,
  Pointer<GESTURECONFIG> pGestureConfig,
  int cbSize,
);

@internal
@Native<NativeWin32Result Function(Pointer<Uint8>)>()
external NativeWin32Result SetKeyboardState_Wrapper(Pointer<Uint8> lpKeyState);

@internal
@Native<NativeWin32Result Function(HWND, COLORREF, Uint8, Uint32)>()
external NativeWin32Result SetLayeredWindowAttributes_Wrapper(
  int hwnd,
  int crKey,
  int bAlpha,
  int dwFlags,
);

@internal
@Native<NativeWin32Result Function(HWND, HMENU)>()
external NativeWin32Result SetMenu_Wrapper(int hWnd, int hMenu);

@internal
@Native<NativeWin32Result Function(HMENU, Uint32, Uint32)>()
external NativeWin32Result SetMenuDefaultItem_Wrapper(
  int hMenu,
  int uItem,
  int fByPos,
);

@internal
@Native<NativeWin32Result Function(HMENU, Pointer<MENUINFO>)>()
external NativeWin32Result SetMenuInfo_Wrapper(
  int param0,
  Pointer<MENUINFO> param1,
);

@internal
@Native<NativeWin32Result Function(HMENU, Uint32, Uint32, HBITMAP, HBITMAP)>()
external NativeWin32Result SetMenuItemBitmaps_Wrapper(
  int hMenu,
  int uPosition,
  int uFlags,
  int hBitmapUnchecked,
  int hBitmapChecked,
);

@internal
@Native<
  NativeWin32Result Function(HMENU, Uint32, BOOL, Pointer<MENUITEMINFO>)
>()
external NativeWin32Result SetMenuItemInfoW_Wrapper(
  int hmenu,
  int item,
  int fByPositon,
  Pointer<MENUITEMINFO> lpmii,
);

@internal
@Native<NativeWin32Result Function(HWND, HWND)>()
external NativeWin32Result SetParent_Wrapper(int hWndChild, int hWndNewParent);

@internal
@Native<NativeWin32Result Function(Int32, Int32)>()
external NativeWin32Result SetPhysicalCursorPos_Wrapper(int x, int y);

@internal
@Native<NativeWin32Result Function(DPI_AWARENESS_CONTEXT)>()
external NativeWin32Result SetProcessDpiAwarenessContext_Wrapper(int value);

@internal
@Native<NativeWin32Result Function(HWND, PCWSTR, HANDLE)>()
external NativeWin32Result SetPropW_Wrapper(
  int hWnd,
  PCWSTR lpString,
  int hData,
);

@internal
@Native<NativeWin32Result Function(Int32, Pointer<Int32>, Pointer<COLORREF>)>()
external NativeWin32Result SetSysColors_Wrapper(
  int cElements,
  Pointer<Int32> lpaElements,
  Pointer<COLORREF> lpaRgbValues,
);

@internal
@Native<NativeWin32Result Function(HCURSOR, Uint32)>()
external NativeWin32Result SetSystemCursor_Wrapper(int hcur, int id);

@internal
@Native<
  NativeWin32Result Function(
    HWND,
    IntPtr,
    Uint32,
    Pointer<NativeFunction<TIMERPROC>>,
  )
>()
external NativeWin32Result SetTimer_Wrapper(
  int hWnd,
  int nIDEvent,
  int uElapse,
  Pointer<NativeFunction<TIMERPROC>> lpTimerFunc,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Int32, Pointer, Uint32)>()
external NativeWin32Result SetUserObjectInformationW_Wrapper(
  int hObj,
  int nIndex,
  Pointer pvInfo,
  int nLength,
);

@internal
@Native<NativeWin32Result Function(HWND, Uint32)>()
external NativeWin32Result SetWindowDisplayAffinity_Wrapper(
  int hWnd,
  int dwAffinity,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32, IntPtr)>()
external NativeWin32Result SetWindowLongPtrW_Wrapper(
  int hWnd,
  int nIndex,
  int dwNewLong,
);

@internal
@Native<NativeWin32Result Function(HWND, Pointer<WINDOWPLACEMENT>)>()
external NativeWin32Result SetWindowPlacement_Wrapper(
  int hWnd,
  Pointer<WINDOWPLACEMENT> lpwndpl,
);

@internal
@Native<
  NativeWin32Result Function(HWND, HWND, Int32, Int32, Int32, Int32, Uint32)
>()
external NativeWin32Result SetWindowPos_Wrapper(
  int hWnd,
  int hWndInsertAfter,
  int x,
  int y,
  int cx,
  int cy,
  int uFlags,
);

@internal
@Native<
  NativeWin32Result Function(
    Int32,
    Pointer<NativeFunction<HOOKPROC>>,
    HINSTANCE,
    Uint32,
  )
>()
external NativeWin32Result SetWindowsHookExW_Wrapper(
  int idHook,
  Pointer<NativeFunction<HOOKPROC>> lpfn,
  int hmod,
  int dwThreadId,
);

@internal
@Native<NativeWin32Result Function(HWND, PCWSTR)>()
external NativeWin32Result SetWindowTextW_Wrapper(int hWnd, PCWSTR lpString);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result ShowCaret_Wrapper(int hWnd);

@internal
@Native<NativeWin32Result Function(HWND, BOOL)>()
external NativeWin32Result ShowOwnedPopups_Wrapper(int hWnd, int fShow);

@internal
@Native<NativeWin32Result Function(Uint32)>()
external NativeWin32Result SkipPointerFrameMessages_Wrapper(int pointerId);

@internal
@Native<NativeWin32Result Function(HDESK)>()
external NativeWin32Result SwitchDesktop_Wrapper(int hDesktop);

@internal
@Native<NativeWin32Result Function(Uint32, Uint32, Pointer, Uint32)>()
external NativeWin32Result SystemParametersInfoW_Wrapper(
  int uiAction,
  int uiParam,
  Pointer pvParam,
  int fWinIni,
);

@internal
@Native<NativeWin32Result Function(Uint32, Uint32, Pointer, Uint32, Uint32)>()
external NativeWin32Result SystemParametersInfoForDpi_Wrapper(
  int uiAction,
  int uiParam,
  Pointer pvParam,
  int fWinIni,
  int dpi,
);

@internal
@Native<
  NativeWin32Result Function(HWND, Uint32, Pointer<RECT>, Uint32, Pointer<HWND>)
>()
external NativeWin32Result TileWindows_Wrapper(
  int hwndParent,
  int wHow,
  Pointer<RECT> lpRect,
  int cKids,
  Pointer<HWND> lpKids,
);

@internal
@Native<
  NativeWin32Result Function(
    HMENU,
    Uint32,
    Int32,
    Int32,
    Int32,
    HWND,
    Pointer<RECT>,
  )
>()
external NativeWin32Result TrackPopupMenu_Wrapper(
  int hMenu,
  int uFlags,
  int x,
  int y,
  int nReserved,
  int hWnd,
  Pointer<RECT> prcRect,
);

@internal
@Native<
  NativeWin32Result Function(
    HMENU,
    Uint32,
    Int32,
    Int32,
    HWND,
    Pointer<TPMPARAMS>,
  )
>()
external NativeWin32Result TrackPopupMenuEx_Wrapper(
  int hMenu,
  int uFlags,
  int x,
  int y,
  int hwnd,
  Pointer<TPMPARAMS> lptpm,
);

@internal
@Native<NativeWin32Result Function(HWND, HACCEL, Pointer<MSG>)>()
external NativeWin32Result TranslateAcceleratorW_Wrapper(
  int hWnd,
  int hAccTable,
  Pointer<MSG> lpMsg,
);

@internal
@Native<NativeWin32Result Function(HHOOK)>()
external NativeWin32Result UnhookWindowsHookEx_Wrapper(int hhk);

@internal
@Native<NativeWin32Result Function(HKL)>()
external NativeWin32Result UnloadKeyboardLayout_Wrapper(int hkl);

@internal
@Native<NativeWin32Result Function(PCWSTR, HINSTANCE)>()
external NativeWin32Result UnregisterClassW_Wrapper(
  PCWSTR lpClassName,
  int hInstance,
);

@internal
@Native<NativeWin32Result Function(HDEVNOTIFY)>()
external NativeWin32Result UnregisterDeviceNotification_Wrapper(int handle);
